@@ -45,6 +45,7 @@ limitations under the License.
 		<!-- Supplied by Jenkins -->
 		<docker.push.registry>${env.NEXUS3_PUSH_REGISTRY}</docker.push.registry>
 		<mockito.version>1.10.19</mockito.version>
+		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>
 	</properties>
 	<!-- Some dependencies are specific to Acumos, but this POM defines no repositories 
 		section. The Jenkins server specifies Acumos repositories. Developers should 
@@ -52,15 +53,33 @@ limitations under the License.
 		and pluginRepositories sections or in a profile: https://nexus.acumos.org/content/repositories/snapshots/ 
 		https://nexus.acumos.org/content/repositories/releases/ -->
 	<dependencies>
+       
+       <dependency>
+              <groupId>com.networknt</groupId>
+              <artifactId>json-schema-validator</artifactId>
+              <version>1.0.4</version>
+      </dependency>
+      <dependency>
+	    <groupId>javax.xml.bind</groupId>
+	    <artifactId>jaxb-api</artifactId>
+	    <version>2.3.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.maven.wagon/wagon-provider-api -->
+	<dependency>
+	    <groupId>org.apache.maven.wagon</groupId>
+	    <artifactId>wagon-provider-api</artifactId>
+	    <version>3.3.3</version>
+	</dependency>
+       
 		<dependency>
 			<groupId>org.acumos.common-dataservice</groupId>
 			<artifactId>cmn-data-svc-client</artifactId>
-			<version>3.0.0</version>
+			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.acumos.acumos-nexus-client</groupId>
 			<artifactId>acumos-nexus-client</artifactId>
-			<version>2.2.1</version>
+			<version>2.2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.acumos.license-manager</groupId>
@@ -268,13 +287,17 @@ limitations under the License.
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<release>11</release>
-                                	<forceJavacCompilerUse>true</forceJavacCompilerUse>
+                            	<forceJavacCompilerUse>true</forceJavacCompilerUse>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
+				<configuration>
+					<argLine> --illegal-access=permit
+					</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -407,7 +430,7 @@ limitations under the License.
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.4</version>
+				<version>0.8.1</version>
 				<executions>
 					<execution>
 						<id>default-prepare-agent</id>
